--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<button data-eyezon="606cd294e16831576e730981" style="color: #ff2d55">Посмотреть вживую</button>
+<button data-eyezon="606cd294e16831576e730981" style="background-color: #ff2d55; color: #FFFFFF; border-color: #FFFFFF">Посмотреть вживую</button>
 
 
 
