--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
 
 
-<button data-eyezon="606cd294e16831576e730981" style="background-color: #ff2d55; color: #FFFFFF; border-color: #FFFFFF">Посмотреть вживую</button>
+<button
+data-eyezon
+        data-eyezon-target="SKU-1"
+        data-eyezon-title="Samsung Television"
+        data-eyezon-put-in-cart
+        data-eyezon="606cd294e16831576e730981" 
+        style="background-color: #ff2d55; color: #FFFFFF; border-color: #FFFFFF">
+Посмотреть вживую
+</button>
 
 
 
