--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 
 
 <button
-data-eyezon
-        data-eyezon-target="SKU-1"
-        data-eyezon-title="Samsung Television"
-        data-eyezon-put-in-cart
-        data-eyezon="606cd294e16831576e730981" 
-        style="background-color: #ff2d55; color: #FFFFFF; border-color: #FFFFFF">
-Посмотреть вживую
-</button>
+data-eyezon data-eyezon-target="SKU-1" data-eyezon-title="Samsung Television" data-eyezon-put-in-cart data-eyezon="606cd294e16831576e730981" style="background-color: #ff2d55; color: #FFFFFF; border-color: #FFFFFF">Посмотреть вживую</button>
 
 
 
