--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 
 
-<button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
-
+<!-- <button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button> -->
+<button data-eyezon="60882e3865777916905794eb">Посмотреть вживую</button>
 
 
 <script>
@@ -29,11 +29,13 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc',
+<!--//businessId: '600024822c60354fa1628efc',-->
+businessId: '5ebe8eddb703a707bc23a25b',
 
 logging: true,
 
-region: 'ru-1'
+<!-- region: 'ru-1' -->
+region: 'sandbox'
 
 
 
