--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-<!--//businessId: '600024822c60354fa1628efc',-->
-businessId: '5ebe8eddb703a707bc23a25b',
+businessId: '600024822c60354fa1628efc',
 
 logging: true,
 
-<!-- region: 'ru-1' -->
-region: 'sandbox'
+region: 'ru-1' 
 
 
 
