--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 
 
-<!-- <button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button> -->
-<button data-eyezon="5ffcd9739a12b51c8064df27">Посмотреть вживую</button>
+<button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
 
 
 <script>
@@ -29,15 +28,13 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-/*businessId: '600024822c60354fa1628efc',*/
+businessId: '600024822c60354fa1628efc',
 
 logging: true,
 
-/*region: 'ru-1' */
+region: 'ru-1'
 
-businessId: '5ffcd6c782e2851c9e8f3b5c',
 
-region: 'us-1'
 
 });
 
