--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 
-<button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
+<!-- <button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button> -->>
+<button data-eyezon="5ebe909bd6e981078e8da1e9">Посмотреть вживую</button>
 
 
 <script>
@@ -28,12 +29,15 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc',
+/* businessId: '600024822c60354fa1628efc'
 
-logging: true,
+region: 'ru-1', */
 
-region: 'ru-1'
+businessId: '5ebe8eddb703a707bc23a25b',
 
+region: 'sandbox',
+
+logging: true
 
 
 });
