--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <!-- <button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button> -->>
-<button data-eyezon="5ebe909bd6e981078e8da1e9">Посмотреть вживую</button>
+<button data-eyezon="5ebe909bd6e981078e8da1e9" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
 
 
 <script>
