--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 
 
-<!-- <button data-eyezon="606cd294e16831576e730981" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button> -->>
-<button data-eyezon="60b24e8832055e3654156947" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
+<button data-eyezon="602a69e99fbd4329ab848f5a" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
 
 
 <script>
@@ -29,13 +28,13 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-/* businessId: '600024822c60354fa1628efc'
+businessId: '600024822c60354fa1628efc'
 
-region: 'ru-1', */
+region: 'ru-1', 
 
-businessId: '60b24d992ebabc3684360856',
+/*businessId: '60b24d992ebabc3684360856',
 
-region: 'sandbox',
+region: 'sandbox', */
 
 logging: true
 
