--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc'
+businessId: '600024822c60354fa1628efc',
 
 region: 'ru-1', 
 
