--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<button data-eyezon="602d3b56c141b629b1ed8976" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
+<button data-eyezon="602d3b56c141b629b1ed8976">Посмотреть вживую</button>
 
 
 <script>
