--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<button data-eyezon="602a6f90f36d5e29f9c7350b"data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
+<button data-eyezon="602a6f90f36d5e29f9c7350b"data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" >Посмотреть вживую</button>
 
 
 <script>
