--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<button data-eyezon="60d37be5959a2f33d5604e15" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" >Посмотреть вживую</button>
+<button data-eyezon="60d4c8175a42d60231671b10" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" >Посмотреть вживую</button>
 
 
 <script>
@@ -28,9 +28,9 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc',
+businessId: '60d4c8165a42d602316719a2',
 
-region: 'ru-1',
+region: 'sandbox',
 
 logging: true
 
