--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<button data-eyezon="60e489a29029438c8d943584" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
+<button data-eyezon="" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
 
 
 <script>
@@ -28,7 +28,7 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '60e489a29029438c8d94355a',
+businessId: '',
 
 region: 'eu-1',
 
