--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 
 
-<button data-eyezon="602a6f90f36d5e29f9c7350b" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
+<!-- <button data-eyezon="602a6f90f36d5e29f9c7350b" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
+-->
+<button data-eyezon="602a6f90f36d5e29f9c7350b">Посмотреть вживую</button>
 
 
 
@@ -47,7 +49,7 @@ if (searchParams.get('region')) {
     eyeZon('setAnalyticsParam', 'region', searchParams.get('region'));
 }
 </script>
-```
+
 
 
 <!-- (function(w, d, s, o, f, js, fjs) {
