--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ window.eyezon_WebViewLogging = true;
 window.eyezon_WebViewHideNotificationUI = true;
 
 eyeZon('init', {
-    businessId: searchParams.get('600024822c60354fa1628efc'),
+    businessId: searchParams.get('businessId'),
     region: 'ru-1',
     unclosable: true
 });
