--- a/libs/index.html
+++ b/libs/index.html
@@ -21,7 +21,7 @@
 (function (w,d,s,o,f,js,fjs) {
 w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
 js = d.createElement(s); fjs = d.getElementsByTagName(s)[0];
-[js.id](http://js.id/) = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
+js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 }(window, document, 'script', 'eyeZon', 'https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js'));
 const searchParams = new URL(window.location.href).searchParams;
 window.eyezon_WebViewLogging = true;
