--- a/libs/index.html
+++ b/libs/index.html
@@ -11,48 +11,15 @@
 
 
 
-<!-- <button data-eyezon="602a6f90f36d5e29f9c7350b" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
--->
+ <button data-eyezon="602a6f90f36d5e29f9c7350b" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
 
 
 
 
-<script>
-(function (w,d,s,o,f,js,fjs) {
-w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
-js = d.createElement(s); fjs = d.getElementsByTagName(s)[0];
-js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
-}(window, document, 'script', 'eyeZon', 'https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js'));
-const searchParams = new URL(window.location.href).searchParams;
-window.eyezon_WebViewLogging = true;
-window.eyezon_WebViewHideNotificationUI = true;
-
-eyeZon('init', {
-    businessId: searchParams.get('businessId'),
-    region: 'ru-1',
-    unclosable: true
-});
-
-if (searchParams.get('name') !== null) {
-    eyeZon('setDefaultClientField', 'name', searchParams.get('name'));
-}
-if (searchParams.get('phone') !== null) {
-    eyeZon('setDefaultClientField', 'phone', searchParams.get('phone'));
-}
-if (searchParams.get('email') !== null) {
-    eyeZon('setDefaultClientField', 'email', searchParams.get('email'));
-}
-if (searchParams.get('clientId')) {
-    eyeZon('setAnalyticsParam', 'clientId', searchParams.get('clientId'));
-}
-if (searchParams.get('region')) {
-    eyeZon('setAnalyticsParam', 'region', searchParams.get('region'));
-}
-</script>
 
 
 
-<!-- (function(w, d, s, o, f, js, fjs) {
+ (function(w, d, s, o, f, js, fjs) {
 <script>
 
 
@@ -66,7 +33,7 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '',
+businessId: '600024822c60354fa1628efc',
 
 region: 'eu-1',
 
@@ -81,7 +48,7 @@ eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
 });
 
 </script>
--->
+
 
 
   </body>
