--- a/libs/index.html
+++ b/libs/index.html
@@ -11,7 +11,7 @@
 
 
 
- <button data-eyezon="602d3b56c141b629b1ed8976" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
+ <button data-eyezon="5fa90f9418660f7963ae8659" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
 
 
 
@@ -33,9 +33,9 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc',
+businessId: '5f8ecfb8db9d9d2259c25805',
 
-/*region: 'ru-1',*/
+region: 'ru-1',
 
 logging: true
 
