--- a/libs/index.html
+++ b/libs/index.html
@@ -39,6 +39,8 @@ region: 'ru-1',
 
 streamingBackend:"wss://wssru2.eyezon.online/",
 
+recordsUrl:"https://recordsru2.eyezon.online/",
+
 logging: true
 
 
