--- a/libs/index.html
+++ b/libs/index.html
@@ -11,7 +11,7 @@
 
 
 
- <button data-eyezon="6139eae243c82bece7f7ab0f" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
+ <button data-eyezon="6139eae243c82bece7f7ab0f" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart>Посмотреть вживую</button>
 
 
 
@@ -19,29 +19,7 @@
 
 
 
-
-<script>
-(function(w, d, s, o, f, js, fjs) {
-
-w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
-
-js = d.createElement(s); fjs = d.getElementsByTagName(s)[0];
-
-js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
-
-}(window, document, 'script', 'eyeZon', 'https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js'));
-
-eyeZon('init', {
-
-businessId: '600024822c60354fa1628efc',
-
-region: 'ru-1',
-
-logging: true
-
-
-});
-
+<script>(function(w, d, s, o, f, js, fjs) {w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };js = d.createElement(s); fjs = d.getElementsByTagName(s)[0];js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);}(window, document, 'script', 'eyeZon', 'https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js'));eyeZon('init', {businessId: '600024822c60354fa1628efc',region: 'ru-1'});
 eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
     // use data.target to add the product to cart
    console.log('«' + data.target + '» has been put in cart in PUT_IN_CART_FROM_WIDGET handler');
