--- a/libs/index.html
+++ b/libs/index.html
@@ -11,7 +11,7 @@
 
 
 
- <button data-eyezon="613b689b73b0fc6920e6d1c5" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart data-eyezon-product-url="https://domain.com/electronics">Посмотреть вживую</button>
+ <button data-eyezon="6139eae243c82bece7f7ab0f" data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart >Посмотреть вживую</button>
 
 
 
