--- a/libs/index.html
+++ b/libs/index.html
@@ -11,13 +11,12 @@
 
 
 
- <button data-eyezon="606563bd8dd16d6ab3be88e9">Посмотреть вживую</button>
+ <button data-eyezon="6139eae243c82bece7f7ab0f">Посмотреть вживую</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
+<script>(function(w, d, s, o, f, js, fjs) {w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };js = d.createElement(s); fjs = d.getElementsByTagName(s)[0];js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);}(window, document, 'script', 'eyeZon', 'https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js'));eyeZon('init', {businessId: '600024822c60354fa1628efc',region: 'ru-1'});</script>
 
-
-<script type="text/javascript" id="">(function(c,e,f,a,g,b,d){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};b=e.createElement(f);d=e.getElementsByTagName(f)[0];b.id=a;b.src=g;b.async=!0;d.parentNode.insertBefore(b,d)})(window,document,"script","eyeZon","https://storage.googleapis.com/eyezonscriptv2/static/js/eyezonwidget.js");eyeZon("init",{businessId:"606311a1dfc51a6ad258f5e1",region:"ru-1"});</script>
 
 
 
