--- a/libs/index.html
+++ b/libs/index.html
@@ -38,6 +38,9 @@ eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
         // use data.target to add the product to cart
         console.log('«' + data.target + '» has been put in cart in PUT_IN_CART_FROM_WIDGET handler');
 });
+
+eyeZon("setAnalyticsParam", "clientId", "330979853.1602764366");
+eyeZon("setAnalyticsParam", "region", "1");
 </script>
 
 
