--- a/libs/index.html
+++ b/libs/index.html
@@ -41,6 +41,8 @@ eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
 
 eyeZon("setAnalyticsParam", "clientId", "330979853.1602764366");
 eyeZon("setAnalyticsParam", "region", "1");
+streamingBackend:"wss://wssru2.eyezon.online/",
+recordsUrl:"https://recordsru2.eyezon.online/"
 </script>
 
 
