--- a/libs/index.html
+++ b/libs/index.html
@@ -29,7 +29,7 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '5d63fe246c2590002eecef83'',
+businessId: '5d63fe246c2590002eecef83',
 //600024822c60354fa1628efc
 region: 'sandbox',
 streamingBackend:"wss://wssru2.eyezon.online/",
