--- a/libs/index.html
+++ b/libs/index.html
@@ -11,7 +11,7 @@
 
 
 <!--602a6f90f36d5e29f9c7350b-->
- <button data-eyezon="602a6f90f36d5e29f9c7350b" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart>Посмотреть вживую</button>
+ <button data-eyezon="62607fadda05b70f0d03e42a" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart>Посмотреть вживую</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
@@ -29,9 +29,9 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '600024822c60354fa1628efc',
+businessId: '6218dd27db9a30520ac435a8',
 //600024822c60354fa1628efc
-region: 'ru-1',
+region: 'sandbox',
 //streamingBackend:"wss://wssru2.eyezon.online/",
 //recordsUrl:"https://recordsru2.eyezon.online/"
 
