--- a/libs/index.html
+++ b/libs/index.html
@@ -35,6 +35,8 @@ businessId: '6218dd27db9a30520ac435a8',
 region: 'sandbox',
 //streamingBackend:"wss://wssru2.eyezon.online/",
 //recordsUrl:"https://recordsru2.eyezon.online/"
+secondRoutingAfterSeconds: 20,
+resetRoutingAfterSeconds: 40
 
 });
 eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
