--- a/libs/index.html
+++ b/libs/index.html
@@ -11,8 +11,8 @@
 
 
 <!--602a6f90f36d5e29f9c7350b-->
- <button data-eyezon="62607fadda05b70f0d03e42a" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
-data-eyezon-shop-ids="['shop1']">Посмотреть вживую</button>
+ <button data-eyezon="626912e35394adc73ebc5a98" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
+>Посмотреть вживую</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
