--- a/libs/index.html
+++ b/libs/index.html
@@ -12,7 +12,7 @@
 
 <!--602a6f90f36d5e29f9c7350b-->
  <button data-eyezon="626912e35394adc73ebc5a98" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
-data-eyezon-shop-ids="['shop1']">Посмотреть вживую</button>
+data-eyezon-shop-ids="['shop1', 'shop2']">Посмотреть вживую</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
@@ -32,9 +32,10 @@ eyeZon('init', {
 
 businessId: '6218dd27db9a30520ac435a8',
 //600024822c60354fa1628efc
-region: 'sandbox'
+region: 'sandbox',
 //streamingBackend:"wss://wssru2.eyezon.online/",
 //recordsUrl:"https://recordsru2.eyezon.online/"
+resetRoutingAfterSeconds: 10
 
 
 });
