--- a/libs/index.html
+++ b/libs/index.html
@@ -39,7 +39,7 @@ region: 'ru-1',
 
 
 });
-eyeZon("on","BUTTON_CLICKED",function(a){document.getElementsByClassName("webchatStartButtonContainer")[0].style.zIndex="2222";dataLayer.push({event:"EYEZON-BUTTON_CLICKED"})});
+//eyeZon("on","BUTTON_CLICKED",function(a){document.getElementsByClassName("webchatStartButtonContainer")[0].style.zIndex="2222";dataLayer.push({event:"EYEZON-BUTTON_CLICKED"})});
 
 eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
         // use data.target to add the product to cart
