--- a/libs/index.html
+++ b/libs/index.html
@@ -39,7 +39,7 @@ region: 'ru-1',
 
 
 });
-eyeZon("on","BUTTON_CLICKED",function(a){
+eyeZon("on","BUTTON_CLICKED",function(data){
   dataLayer.push({event:"EYEZON-BUTTON_CLICKED"});  
 });
 
