--- a/libs/index.html
+++ b/libs/index.html
@@ -40,7 +40,7 @@ region: 'ru-1',
 
 });
 eyeZon("on","BUTTON_CLICKED",function(data){
-  dataLayer.push({event:"EYEZON-BUTTON_CLICKED"});  
+  console.log("GAGAGA");  
 });
 
 eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
