--- a/libs/index.html
+++ b/libs/index.html
@@ -40,7 +40,10 @@ region: 'ru-1',
 
 });
 eyeZon("on","BUTTON_CLICKED",function(data){
-  dataLayer.push({event:"EYEZON-BUTTON_CLICKED"});
+let x = 2;
+ if (x == 2) {
+console.log('DBABON_CLEK1', data);  
+  //dataLayer.push({event:"EYEZON-BUTTON_CLICKED"});
   console.log("GAGAGA");  
 });
 
