--- a/libs/index.html
+++ b/libs/index.html
@@ -44,7 +44,7 @@ let x = 2;
  if (x == 2) {
 console.log('DBABON_CLEK1', data);  
   //dataLayer.push({event:"EYEZON-BUTTON_CLICKED"});
-  console.log("GAGAGA");  
+  console.log("GAGAGA")};  
 });
 
 eyeZon('on', 'PUT_IN_CART_FROM_WIDGET', function(data) {
