--- a/libs/index.html
+++ b/libs/index.html
@@ -11,8 +11,8 @@
 
 
 <!--602a6f90f36d5e29f9c7350b-->
- <button class="gavno" data-eyezon="627631893de111cdf1f57369" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
-data-eyezon-shop-ids="['shop1', 'shop2']">Посмотреть вживую</button>
+ <button class="gavno" data-eyezon="626912e35394adc73ebc5a98" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
+>Посмотреть вживую</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
@@ -30,9 +30,9 @@ js.id = o; js.src = f; js.async = true; fjs.parentNode.insertBefore(js, fjs);
 
 eyeZon('init', {
 
-businessId: '5d63fe246c2590002eecef83',
+businessId: '6218dd27db9a30520ac435a8',
 //600024822c60354fa1628efc
-region: 'ru-1',
+region: 'sandbox',
 //streamingBackend:"wss://wssru2.eyezon.online/",
 //recordsUrl:"https://recordsru2.eyezon.online/"
 //resetRoutingAfterSeconds: 10
