--- a/libs/index.html
+++ b/libs/index.html
@@ -33,6 +33,8 @@ eyeZon('init', {
 businessId: '6218dd27db9a30520ac435a8',
 //600024822c60354fa1628efc
 region: 'sandbox',
+secondRoutingAfterSeconds: 10,
+resetRoutingAfterSeconds: 20
 //streamingBackend:"wss://wssru2.eyezon.online/",
 //recordsUrl:"https://recordsru2.eyezon.online/"
 //resetRoutingAfterSeconds: 10
