--- a/libs/index.html
+++ b/libs/index.html
@@ -12,7 +12,10 @@
 
 <!--602a6f90f36d5e29f9c7350b-->
  <button class="gavno" data-eyezon="633cbe8bcff9ddc5301c0f92" data-eyezon-target="Test3" data-eyezon-title="Chat title for test target" data-eyezon-put-in-cart 
->Посмотреть вживую</button>
+ data-eyezon-streamer-ids='["123"]'
+        data-eyezon-second-shop-ids='["1"]'>
+Посмотреть вживую
+</button>
 <!--data-eyezon-title="Chat title for test target" data-eyezon-target="SKU-1" data-eyezon-put-in-cart  -->
 
 
